--- a/MemoryMosaic/Shared/Modal/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/Modal/CollectionSelector.razor
@@ -92,6 +92,8 @@
 
     [Parameter] public Guid SelectedItem { get; set; } = Guid.Empty; //Used in LCV when viewing a single item.
     
+    [Parameter] public Action? Rerender { get; set; } //Used to rerender LCV after adding items.
+    
     [Parameter] public Action? OnCheckClicked { get; set; } //Used in Import for overriding the default behavior.
 
     [Parameter] public bool ClearSelectedOnConfirm { get; set; } = true; //Used in Import.
@@ -117,6 +119,7 @@
     {
         SelectedItems.Clear();
         Disable();
+        Rerender?.Invoke();
     }
 
     private static void ClearAlbumChecks() => checkedAlbums = checkedAlbums.Select(_ => false).ToList();
