Add <h1> to LCV shown when Content is empty

--- a/MemoryMosaic/Pages/Test.razor
+++ b/MemoryMosaic/Pages/Test.razor
@@ -3,5 +3,4 @@
 
 <title>Test - MM</title>
 
-<LibraryContentViewer DefaultViewMode="ViewMode.Day"/>
-@* <LibraryContentViewer DefaultViewMode="ViewMode.Day" TrashPage="true"/> *@
+<LibraryContentViewer DefaultViewMode="ViewMode.Day" NoItemsText="no items"/>
