Add spacing between IconButtons in header

--- a/MemoryMosaic/Styles/Components/LibraryContentViewer/LibraryContentViewer.scss
+++ b/MemoryMosaic/Styles/Components/LibraryContentViewer/LibraryContentViewer.scss
@@ -12,6 +12,11 @@ header {
 		@include flex-row;
 		position: absolute;
 		right: 55px;
+		
+		> .iconBtn {
+			margin-left: 2px;
+			margin-right: 2px;
+		}
 	}
 }
 
