--- a/MemoryMosaic/Pages/Test.razor
+++ b/MemoryMosaic/Pages/Test.razor
@@ -3,4 +3,4 @@
 
 <title>Test - MM</title>
 
-<LibraryContentViewer DefaultViewMode="ViewMode.Day" NoItemsText="no items"/>
+<LibraryContentViewer DefaultGroupBy="GroupBy.Day" NoItemsText="no items"/>
