--- a/MemoryMosaic/Shared/LibraryContentViewer/CtrlGInput.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/CtrlGInput.razor
@@ -4,7 +4,7 @@
 
 <ModalBackground Visibility="@Visibility">
 	<div id="ctrlGInput">
-		<span>Choose New Starting Date Taken:</span>
+		<span>Pick New Starting Date Taken</span>
 		
 		<div>
 			<input type="date" @bind="@NewStartDate"/>
