--- a/MemoryMosaic/Styles/Components/LibraryContentViewer/CtrlGInput.scss
+++ b/MemoryMosaic/Styles/Components/LibraryContentViewer/CtrlGInput.scss
@@ -1,26 +1,49 @@
-﻿/* Re-usable component for allowing user to choose the date taken they want LCV to start at. */
-#ctrlGInput {
-	padding: 12px 12px 6px;
-	border: 1px solid white;
-	display: flex;
-	flex-direction: column;
+@import "../../Shared";
 
-	> span { margin-bottom: 4px; }
+#ctrlGInput {
+	@include flex-col;
+	border: 2px solid white;
+	padding-top: 8px;
+	padding-left: 8px;
+	border-radius: 4px;
+
+	> span {
+		margin-bottom: 8px;
+		margin-right: 8px;
+	}
 
 	> div {
-		display: flex;
-		flex-direction: row;
-		align-items: center;
+		@include flex-row;
+		align-self: flex-end;
+		margin-right: 4px;
+		margin-bottom: 4px;
 
 		> input[type="date"] {
 			background-color: black;
-			color: white;
-			width: 110px;
-			height: 30px;
 			border: 1px solid white;
+			margin-right: 4px;
+			padding: 2px;
 			border-radius: 4px;
-		}
+			width: fit-content;
 
-		> button { margin-left: 6px; }
+			&:focus {
+				border: 1px solid #0080ff;
+				outline: 1px solid #0080ff;
+			}
+
+			&::-webkit-datetime-edit-day-field:focus { background-color: #0080ff; }
+			&::-webkit-datetime-edit-month-field:focus { background-color: #0080ff; }
+			&::-webkit-datetime-edit-year-field:focus { background-color: #0080ff; }
+
+			&::-webkit-calendar-picker-indicator {
+				margin-left: -20px;
+				font-size: 16px;
+			}
+		}
+		
+		> .iconBtn {
+			margin-left: 2px;
+			margin-right: 2px;
+		}
 	}
 }
