Add OrderByField to LCV

--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -128,6 +128,9 @@ Items can be selected, and depending on the page, different options may be appli
 	
 	[Parameter]
 	public required string Where { get; set; }
+
+	[Parameter]
+	public required string OrderByField { get; set; } = "date_taken";
 	
 	[Parameter]
 	public required string OrderBy { get; set; } = "date_taken DESC, date_added DESC";
