--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -99,6 +99,8 @@ Items can be selected, and depending on the page, different options may be appli
 
 <CollectionSelector @ref="@cs" SelectedItems="SelectedItems" Rerender="@StateHasChanged"/>
 
+<CtrlGInput @ref="@CtrlGInput" StartDateChanged="@StartDateChanged"/>
+
 <TwoChoiceInput @ref="@starPrompt" YesBtnIcon="star" YesBtnText="Add" NoBtnIcon="star_outline" NoBtnText="Remove" YesBtnClick="@(() => UpdateStars(true))" NoBtnClick="@(() => UpdateStars(false))" Message="@(SelectedItems.Count > 1 ? "Add or remove stars for selected items?" : "Add or remove star for selected item?")"/>
 <TwoChoiceInput @ref="@deletePrompt" YesBtnClick="@DeleteSelected" NoBtnClick="@(() => deletePrompt.Disable())" Message="@DeletePromptMessage"/>
 
@@ -137,13 +139,17 @@ Items can be selected, and depending on the page, different options may be appli
 	
 	public List<MediaRow> Content { get; private set; } = new(600);
 	
-	public DateTime StartDate { get; set; }
-
 	private ContentLoader bottomLoader = null!;
+
+	public CtrlGInput CtrlGInput { get; private set; } = new();
 }
 
 @functions {
-	
+	private void StartDateChanged()
+	{
+		Content.Clear();
+		bottomLoader = new ContentLoader(this, true, true);
+	}
 }
 
 @* Grouping and displaying data *@
